minor fixes in css spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,8 +177,9 @@ a {
 }
 
 .benefit-brand h3 {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: center;
+    padding-top: 25px;
 }
 
 .benefit-brand img {
@@ -197,6 +198,7 @@ a {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
+    padding-top: 25px;
 }
 
 .benefit-cost img {
